--- a/assets/scss/UI/_ui-kit.scss
+++ b/assets/scss/UI/_ui-kit.scss
@@ -57,6 +57,8 @@
     overflow: hidden;
     position: relative;
 
+    text-align: center;
+
     -webkit-transition: all .1s linear;
     transition: all .1s linear;
 
