--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,3 +1,6 @@
-@import "style.scss";
-@import "mobile.scss";
-@import "docs.scss";
+@import "./mainpage/mainpage.scss";
+@import "./mainpage/mobile.scss";
+@import "./docs/docs.scss";
+@import "global.scss";
+@import "./header/header.scss";
+@import "./footer/footer.scss";
