--- a/assets/scss/header/header.scss
+++ b/assets/scss/header/header.scss
@@ -41,6 +41,7 @@
             position: relative;
             cursor: pointer;
             z-index: 5;
+            
 
             &__burger {
                 display: block;
@@ -169,6 +170,7 @@
                 line-height: 24px;
                 color: $white;
                 list-style: none;
+                margin: 0;
 
                 &-item {
                     padding: 26px 0;
