--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -89,6 +89,7 @@
                     </ul>
 
                     {{ range .Site.Sections }}
+                    {{ if eq .RelPermalink "/docs/" }}
                     {{ range .Pages }}
                     <ul class="footer__content-nav__list">
                         {{.LinkTitle}}
@@ -99,6 +100,7 @@
 
                         {{ end }}
                     </ul>
+                    {{ end }}
                     {{ end }}
                     {{ end }}
 
@@ -131,6 +133,7 @@
             <div class="footer__content">
                 <nav class="footer__content-nav">
                     {{ range .Site.Sections }}
+                    {{ if eq .RelPermalink "/docs/" }}
                     {{ range .Pages }}
                     <ul class="footer__content-nav__list">
                         {{.LinkTitle}}
@@ -140,6 +143,7 @@
                         </li>
                         {{ end }}
                     </ul>
+                    {{ end }}
                     {{ end }}
                     {{ end }}
                 </nav>
@@ -172,12 +176,11 @@
             </div>
             <div class="footer__copy">
                 <p>2021-2023 © P2PCloud</p>
-                <!--TODO: here-->
-                <!-- <ul class="footer__copy-list">
-                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Privacy Policy</a></li>
-                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Cookie Statement</a></li>
-                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Terms &amp; Conditions</a></li>
-                </ul> -->
+                <ul class="footer__copy-list">
+                    <!-- <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Privacy Policy</a></li>
+                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Cookie Statement</a></li> -->
+                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/legal/terms/">Terms &amp; Conditions</a></li>
+                </ul>
             </div>
         </div>
     </footer>
