--- a/assets/scss/docs/docs.scss
+++ b/assets/scss/docs/docs.scss
@@ -5,15 +5,13 @@
     padding-bottom: 25px;
 }
 
-pre {
-    padding: 10px;
-    border-radius: 12px;
-}
 
 .highlight {
+    border-radius: 12px;
     max-width: 100%;
     overflow-x: scroll;
     width: 100%;
+    margin-bottom: 16px;
 
     & pre {
         padding: 10px;
