--- a/layouts/index.html
+++ b/layouts/index.html
@@ -78,21 +78,33 @@
             <p class="values__container-desc">At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and anonymity. Here's what you can expect:</p>
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
-                    <img src="./design/img/shield-card.svg" alt="shield">
-                    <p>Secure</p>
-                    <p>No one but you has access to your VM or your data.We will never request or change your keys – what you do with your data is your business.</p>
+                    <div class="values__container-cards__img">
+                        <img src="./design/img/shield-card.svg" alt="shield">
+                    </div>
+                    <div class="values__container-cards__body">
+                        <p>Secure</p>
+                        <p>No one but you has access to your VM or your data.We will never request or change your keys – what you do with your data is your business.</p>
+                    </div>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="./design/img/lock-card.svg" alt="lock">
-                    <p>Censorship resistant</p>
-                    <p>Not controlled by a monolithic corporation. Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and
-                        stop service because of how the hardware is being utilized.</p>
+                    <div class="values__container-cards__img">
+                        <img src="./design/img/lock-card.svg" alt="lock">
+                    </div>
+                    <div class="values__container-cards__body">
+                        <p>Censorship resistant</p>
+                        <p>Not controlled by a monolithic corporation. Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and
+                            stop service because of how the hardware is being utilized.</p>
+                    </div>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="./design/img/eye-card.svg" alt="eye">
-                    <p>Secure</p>
-                    <p>P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. The hosting provider has
-                        only your blockchain address, so you can stay anonymous.</p>
+                    <div class="values__container-cards__img">
+                        <img src="./design/img/eye-card.svg" alt="eye">
+                    </div>
+                    <div class="values__container-cards__body">
+                        <p>Secure</p>
+                        <p>P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. The hosting provider has
+                            only your blockchain address, so you can stay anonymous.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,15 +119,17 @@
                     <div class="changing__container-content__btn">
                         <a class="btn-gradient-two" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                         <div class="changing__container-content__btn-ghost">
-                            <button class="changing__container-content__btn-ghost-btn">
-                                <a href="https://t.me/p2pcloud" target="_blank">
-                                    Join Telegram community
-                                </a>
-                                <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
-                                </svg>
-                            </button>
+                            <div class="changing__container-content__btn-ghost-wrap">
+                                <button class="changing__container-content__btn-ghost-btn">
+                                    <a href="https://t.me/p2pcloud" target="_blank">
+                                        Join Telegram community
+                                    </a>
+                                    <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,4 +137,19 @@
         </div>
     </section>
 </main>
+<style>
+
+
+    .btn-gradient:after {
+        display: none;
+    }
+    .btn-gradient-two:before {
+        display: none;
+    }
+    .changing__container-content__btn-ghost::after {
+        display: none;
+    }
+
+
+</style>
 {{ end }}
