--- a/assets/scss/header/header.scss
+++ b/assets/scss/header/header.scss
@@ -5,6 +5,10 @@
     width: 100%;
 }
 
+.header a {
+    text-decoration: none;
+}
+
 .border__btn {
     width: 100%;
     height: 100%;
@@ -41,7 +45,7 @@
             position: relative;
             cursor: pointer;
             z-index: 5;
-            
+
 
             &__burger {
                 display: block;
