--- a/assets/scss/mainpage/mainpage.scss
+++ b/assets/scss/mainpage/mainpage.scss
@@ -642,6 +642,7 @@
             align-items: center;
             justify-content: space-between;
             width: 100%;
+
             &__card {
                 display: flex;
                 flex-direction: column;
@@ -653,12 +654,14 @@
                 border-radius: 12px;
                 padding: 30px;
             }
-            &__img {
-            }
+
+            &__img {}
+
             &__body {
                 display: flex;
                 flex-direction: column;
                 row-gap: 15px;
+
                 & p:nth-child(1) {
                     font-weight: $bold;
                     font-size: $size24;
@@ -759,18 +762,20 @@
                         -webkit-transition: all .3s linear;
                         transition: all .3s linear;
                     }
+
                     &-wrap {
-                        background: rgba(40,160,230,1);
-                        background: -moz-linear-gradient(left, rgba(40,160,230,1) 0%, rgba(238,130,238,1) 100%);
-                        background: -webkit-gradient(left top, right top, color-stop(0%, rgba(40,160,230,1)), color-stop(100%, rgba(238,130,238,1)));
-                        background: -webkit-linear-gradient(left, rgba(40,160,230,1) 0%, rgba(238,130,238,1) 100%);
-                        background: -o-linear-gradient(left, rgba(40,160,230,1) 0%, rgba(238,130,238,1) 100%);
-                        background: -ms-linear-gradient(left, rgba(40,160,230,1) 0%, rgba(238,130,238,1) 100%);
-                        background: linear-gradient(to right, rgba(40,160,230,1) 0%, rgba(238,130,238,1) 100%);
-                        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#28a0e6', endColorstr='#ee82ee', GradientType=1 );
+                        background: rgba(40, 160, 230, 1);
+                        background: -moz-linear-gradient(left, rgba(40, 160, 230, 1) 0%, rgba(238, 130, 238, 1) 100%);
+                        background: -webkit-gradient(left top, right top, color-stop(0%, rgba(40, 160, 230, 1)), color-stop(100%, rgba(238, 130, 238, 1)));
+                        background: -webkit-linear-gradient(left, rgba(40, 160, 230, 1) 0%, rgba(238, 130, 238, 1) 100%);
+                        background: -o-linear-gradient(left, rgba(40, 160, 230, 1) 0%, rgba(238, 130, 238, 1) 100%);
+                        background: -ms-linear-gradient(left, rgba(40, 160, 230, 1) 0%, rgba(238, 130, 238, 1) 100%);
+                        background: linear-gradient(to right, rgba(40, 160, 230, 1) 0%, rgba(238, 130, 238, 1) 100%);
+                        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28a0e6', endColorstr='#ee82ee', GradientType=1);
                         border-radius: 12px;
                         padding: 2px;
                     }
+
                     &-btn {
                         display: flex;
                         align-items: center;
@@ -780,6 +785,9 @@
                             flex-shrink: 0;
                         }
 
+                        a {
+                            text-decoration: none;
+                        }
 
                         padding: 13px 30px;
                         background: $black-light;
