--- a/assets/scss/docs/docs.scss
+++ b/assets/scss/docs/docs.scss
@@ -42,6 +42,10 @@
 
             &__buttons {
                 margin-top: 30px;
+
+                a {
+                    text-decoration: none;
+                }
             }
 
             & ul {
@@ -62,7 +66,6 @@
                 color: $white;
                 -webkit-transition: all .3s linear;
                 transition: all .3s linear;
-                text-decoration: underline;
 
                 &:hover {
                     color: $blue-light;
