--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,6 +21,9 @@
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
 
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="480x480" href="/design/img/favicon.png">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9896Q2CHJ"></script>
     <script>
