changed images and logos for homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,9 +7,9 @@
                     <h1 class="hero__container-content__title">Welcome to Secure Cloud Computing</h1>
                     <p class="hero__container-content__desc">Rent Servers with <span class="text-gradient">Built-In Encryption</span> on P2P Cloud</p>
                     <div class="hero__container-content__info">
-                        <p class="hero__container-content__info-icon"><img src="./design/img/shield.svg" alt="shield">Affordable</p>
+                        <p class="hero__container-content__info-icon"><img src="./design/img/money.svg" alt="shield">Affordable</p>
                         <p class="hero__container-content__info-icon"><img src="./design/img/lock.svg" alt="lock">Secure</p>
-                        <p class="hero__container-content__info-icon"><img src="./design/img/eye.svg" alt="eye">Decentralized</p>
+                        <p class="hero__container-content__info-icon"><img src="./design/img/decentralized.svg" alt="eye">Decentralized</p>
                     </div>
                     <a class="btn-gradient" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                 </div>
@@ -82,7 +82,7 @@
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
                     <div class="values__container-cards__img">
-                        <img src="./design/img/shield-card.svg" alt="shield">
+                        <img src="./design/img/money-card.svg" alt="money">
                     </div>
                     <div class="values__container-cards__body">
                         <p>Affordable</p>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="values__container-cards__card">
                     <div class="values__container-cards__img">
-                        <img src="./design/img/eye-card.svg" alt="eye">
+                        <img src="./design/img/decentralized-card.svg" alt="decentralized">
                     </div>
                     <div class="values__container-cards__body">
                         <p>Decentralized</p>
