--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,6 +47,11 @@
                                 d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
                         </svg>
                     </a>
+                    <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website" target="_blank">
+                        <svg width="22" height="18" viewBox="0 2 22 20" fill="white" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+                        </svg>
+                    </a>
                     <a class="header__container-nav__social-icon" href="https://twitter.com/p2pcloud_io" target="_blank">
                         <svg width="22" height="18" viewBox="0 0 22 18" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -70,10 +75,7 @@
                         <a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a>
                     </li>
                     <li class="header__container-nav__list-item">
-                        <a class="header__container-nav__list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a>
-                    </li>
-                    <li class="header__container-nav__list-item">
-                        <a class="header__container-nav__list-item__link" href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's meet</a>
+                        <a class="header__container-nav__list-item__link" href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
                 <div class="header__container-nav__btn">
@@ -159,10 +161,8 @@
                 <div class="footer__content-menu">
                     <ul class="footer__content-menu__list">
                         <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/">Main</a></li>
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="https://calendly.com/p2pcloud/private-chat"
-                                target="_blank">Let's&nbsp;meet</a>
+                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="https://calendly.com/p2pcloud/private-chat"
+                                target="_blank">Let's&nbsp;Chat</a>
                         </li>
                         <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/panel.html">App</a></li>
                     </ul>
@@ -182,6 +182,11 @@
                                 </path>
                             </svg>
                         </a>
+                        <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website" target="_blank">
+                            <svg width="22" height="18" viewBox="0 2 22 20" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+                            </svg>
+                        </a> 
 
                     </div>
                 </div>
