--- a/layouts/index.html
+++ b/layouts/index.html
@@ -77,8 +77,8 @@
 
     <section class="values">
         <div class="container values__container">
-            <h2 class="values__container-title">Following <span class="text-gradient">blockchain</span> values</h2>
-            <p class="values__container-desc">At P2P Cloud, we follow the values of the blockchain – secured, affordable, and decentralized. Here's what you can expect:</p>
+            <h2 class="values__container-title">Upholding The Principles</h2>
+            <h2 class="values__container-title">of <span class="text-gradient">Decentralization</span></h2>
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
                     <div class="values__container-cards__img">
