--- a/layouts/index.html
+++ b/layouts/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="unique__container-card__border">
                 <div class="unique__container-card">
-                    <h3 class="unique__container-card__title">Open <span class="text-gradient">marketplace</span></h3>
+                    <h3 class="unique__container-card__title">Open <span class="text-gradient">Marketplace</span></h3>
                     <p class="unique__container-card__desc">Break free from the monopolistic grip of Big Tech. With P2P Cloud, control and affordability is back in your hands. 
                         We are an open marketplace platform promoting healthy competition, slashing costs to less than a third compared to the Big Tech trio, who hold 60% of 
                         the market. We value transparency and fairness over contracts and hidden charges. Embrace the future with P2P Cloud, where the market truly is free.</p>
@@ -120,7 +120,7 @@
         <div class="container changing__container">
             <div class="changing__container-border">
                 <div class="changing__container-content">
-                    <h3 class="changing__container-content__title">Join our movement creating a <span class="text-gradient"> free market</span></h3>
+                    <h3 class="changing__container-content__title">Join Our Movement Creating a <span class="text-gradient"> Free Market</span></h3>
                     <div class="changing__container-content__btn">
                         <a class="btn-gradient-two" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                         <div class="changing__container-content__btn-ghost">
